modified add to cart API and added update functionality